[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
serde = "1.0.178"
serde_json = "1.0.104"
