[package]
name = "list-rs"
version = "0.1.0"
description = "A simple clli todo app"
edition = "2021"
authors = ["Makis Christou <makis_christou@protonmail.com>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
dotenv = "0.15.0"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
